kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${KUBE_DEPLOYMENT_NAME}
  namespace: ${KUBE_NAMESPACE}
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: ${KUBE_APP_NAME}
  template:
    metadata:
      labels:
        app: ${KUBE_APP_NAME}
    spec:
      volumes:
        - name: secrets
          secret:
            secretName: ${KUBE_EXAMPLE_SECRET_NAME}
      containers:
        - name: ${KUBE_APP_NAME}
          image: ${KUBE_IMAGE_NAME}
          imagePullPolicy: ${KUBE_IMAGE_PULL_POLICY}
          ports:
          - containerPort: ${KUBE_CONTAINER_PORT}
          volumeMounts:
            - name: secrets
              mountPath: "/home/app/secrets/"
              readOnly: true
