kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${KUBE_SERVICE_NAME}
  namespace: ${KUBE_NAMESPACE}
spec:
  selector:
    app: ${KUBE_APP_NAME}
  ports:
  - protocol: TCP
    port: ${KUBE_SERVICE_EXTERNAL_PORT}
    targetPort: ${KUBE_CONTAINER_PORT}
  type: LoadBalancer
